--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ELABORATO_LAB_DI_PROGRAMMAZIONE)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ELABORATO_LAB_DI_PROGRAMMAZIONE main.cpp)
+add_executable(ELABORATO_LAB_DI_PROGRAMMAZIONE main.cpp User.cpp User.h ShoppingList.cpp ShoppingList.h)
